<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D9D9D9"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".NewUser" >

    <TextView
        android:id="@+id/text_fill_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/fill_details"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#8A0707" />
    
	<EditText
	    android:id="@+id/edit_first_name"
	    android:layout_alignParentLeft="true"
	    android:layout_below="@id/text_fill_details"
	    android:layout_height="wrap_content"
	    android:layout_width="0px"
	    android:hint="@string/hint_first_name" >
	    <requestFocus />
	</EditText>
	
	<EditText
	    android:id="@+id/edit_last_name"
	    android:layout_alignParentRight="true"
	    android:layout_below="@id/text_fill_details"
	    android:layout_height="wrap_content"
	    android:layout_width="0px"
	    android:hint="@string/hint_last_name" >
	    <requestFocus />
	</EditText>
	
	<EditText
        android:id="@+id/edit_age"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/edit_first_name"
        android:layout_below="@+id/edit_first_name"
        android:ems="10"
        android:hint="@string/age"
        android:inputType="number" >
	    <requestFocus />
	</EditText>
	
	<Spinner
	    android:id="@+id/spinner_blood_groups"
	    android:layout_width="0dp"
	    android:layout_height="wrap_content"
	    android:layout_alignParentRight="true"
	    android:layout_below="@id/edit_last_name"
	    android:hint="@string/blood_group" />
	
	<EditText
	    android:id="@+id/edit_primary_contact"
	    android:layout_alignParentLeft="true"
	    android:layout_below="@id/edit_age"
	    android:layout_height="wrap_content"
	    android:layout_width="0px"
	    android:hint="@string/hint_primary_contact"
	    android:inputType="number" >
	    <requestFocus />
	</EditText>
	
	<EditText
	    android:id="@+id/edit_secondary_contact"
	    android:layout_alignParentRight="true"
	    android:layout_alignBottom="@id/edit_primary_contact"
	    android:layout_height="wrap_content"
	    android:layout_width="0px"
	    android:hint="@string/hint_secondary_contact"
	    android:inputType="number" >
	    <requestFocus />
	</EditText>
	    
	<EditText
	    android:id="@+id/edit_address_street"
	    android:layout_alignParentLeft="true"
	    android:layout_below="@id/edit_primary_contact"
	    android:layout_height="wrap_content"
	    android:layout_width="match_parent"
	    android:hint="@string/hint_address_street"
	    android:inputType="text" >
	    <requestFocus />
	</EditText>
	
	<EditText
	    android:id="@+id/edit_address_neighbourhood"
	    android:layout_alignParentLeft="true"
	    android:layout_below="@id/edit_address_street"
	    android:layout_height="wrap_content"
	    android:layout_width="match_parent"
	    android:hint="@string/hint_address_neighbourhood"
	    android:inputType="text" >
	    <requestFocus />
	</EditText>
	
	<EditText
	    android:id="@+id/edit_address_city"
	    android:layout_alignParentLeft="true"
	    android:layout_below="@id/edit_address_neighbourhood"
	    android:layout_height="wrap_content"
	    android:layout_width="0dp"
	    android:hint="@string/hint_city"
	    android:inputType="text" >
	    <requestFocus />
	</EditText>
	
	<EditText
	    android:id="@+id/edit_address_state"
	    android:layout_alignParentRight="true"
	    android:layout_below="@id/edit_address_neighbourhood"
	    android:layout_height="wrap_content"
	    android:layout_width="0dp"
	    android:hint="@string/hint_address_state"
	    android:inputType="text" >
	    <requestFocus />
	</EditText>
	
	<Button 
	    android:id="@+id/button_register"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/edit_address_city"
	    android:layout_centerHorizontal="true"
	    android:text="@string/register"
	    android:onClick="register" />
    
</RelativeLayout>