<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".EnterDetails" >

    <TextView
        android:id="@+id/text_verified"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verified"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />
    
    <TextView
        android:id="@+id/text_enter_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/details"
        android:layout_below="@id/text_verified"
        android:layout_centerHorizontal="true" />
    
    <TextView
        android:id="@+id/text_space1"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_below="@id/text_enter_details" />
    
    <TextView
        android:id="@+id/text_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:layout_below="@id/text_space1"
        android:layout_alignBottom="@+id/edit_name"
        android:layout_alignParentLeft="true"
        android:gravity="center_vertical" />
    
    <EditText
	    android:id="@+id/edit_name"
	    android:layout_alignParentRight="true"
	    android:layout_below="@id/text_space1"
	    android:layout_height="wrap_content"
	    android:layout_width="0px"
	    android:hint="@string/hint_full_name" >
	    <requestFocus />
	</EditText>
	
    <TextView
        android:id="@+id/text_space2"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_below="@id/text_name" />
	
    <TextView
        android:id="@+id/text_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/user_password"
        android:layout_below="@id/text_space2"
        android:layout_alignParentLeft="true"
        android:layout_alignBottom="@+id/edit_password"
        android:gravity="center_vertical" />
    
    <EditText
	    android:id="@+id/edit_password"
	    android:layout_alignParentRight="true"
	    android:layout_below="@id/text_space2"
	    android:layout_height="wrap_content"
	    android:layout_width="0px"
	    android:hint="@string/hint_password"
	    android:inputType="textPassword" >
	    <requestFocus />
	</EditText>
	
    <TextView
        android:id="@+id/text_space3"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_below="@id/text_password" />
    
    <TextView
        android:id="@+id/text_blood_group"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/blood_group"
        android:layout_below="@id/text_space3"
        android:layout_alignParentLeft="true"
        android:layout_alignBottom="@+id/spinner_blood_groups"
        android:gravity="center_vertical" />
    
    <Spinner
	    android:id="@+id/spinner_blood_groups"
	    android:layout_width="0dp"
	    android:layout_height="wrap_content"
	    android:layout_alignParentRight="true"
	    android:layout_below="@id/text_space3" />
    
    <TextView
        android:id="@+id/text_space4"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_below="@id/text_blood_group" />
    
    <TextView
        android:id="@+id/text_city"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/city"
        android:layout_below="@id/text_space4"
        android:layout_alignParentLeft="true"
        android:layout_alignBottom="@+id/edit_city"
        android:gravity="center_vertical" />
    
    <EditText
	    android:id="@+id/edit_city"
	    android:layout_alignParentRight="true"
	    android:layout_below="@id/text_space4"
	    android:layout_height="wrap_content"
	    android:layout_width="0px"
	    android:hint="@string/hint_city" >
	    <requestFocus />
	</EditText>
	
    <TextView
        android:id="@+id/text_space5"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_below="@id/text_city" />
	
    <Button 
	    android:id="@+id/button_register"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/text_space5"
	    android:layout_centerHorizontal="true"
	    android:text="@string/register"
	    android:onClick="register" />
    
    

</RelativeLayout>
