<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AskBlood" >

    <TextView
        android:id="@+id/text_blood_groups"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignBottom="@+id/spinner_blood_groups"
        android:gravity="center_vertical"
        android:text="@string/blood_group_required" />
    
    <Spinner
	    android:id="@+id/spinner_blood_groups"
	    android:layout_width="0dp"
	    android:layout_height="wrap_content"
	    android:layout_alignParentRight="true"
	    android:layout_alignParentTop="true"/>
    
    <TextView
        android:id="@+id/text_space1"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_below="@id/text_blood_groups" />
    
    <TextView
        android:id="@+id/text_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_space1"
        android:text="@string/enter_address" />
    
    <EditText
        android:id="@+id/edit_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_address"
        android:gravity="center_horizontal"
        android:inputType="text" />
    
    <TextView
        android:id="@+id/text_space2"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_below="@id/edit_address" />
    
    <TextView
        android:id="@+id/text_contact"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_space2"
        android:layout_alignParentLeft="true"
        android:layout_alignBottom="@+id/edit_contact"
        android:gravity="center_vertical"
        android:text="Contact: " />
    
    <EditText
        android:id="@+id/edit_contact"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_space2"
        android:layout_alignParentRight="true"
        android:inputType="number"
        android:maxLength="10" />
    
    <TextView
        android:id="@+id/text_space3"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_below="@id/edit_contact" />
    
    <Button 
	    android:id="@+id/button_ask_blood"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/text_space3"
	    android:layout_centerHorizontal="true"
	    android:text="@string/request_blood"
	    android:onClick="askBlood" />
    
    

</RelativeLayout>
